<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bass Drop</string>
    <string name="about_activity_intro">Have a drop you would like to see featured in the game?</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="bass_drop_main_screen">Will The Bass</string>
    <string name="title_activity_play">Stop</string>
    <string name="twitter_handle">"@willthebassdrop"</string>
    <string name="email_address">"willthebassdrop@gmail.com"</string>

    <string-array name="drop_array">
        <item>Select a Drop</item>
        <item>DJ Sam F - Lonely Island</item>
        <item>DJ Snake - Lunatic</item>
        <item>Salto Wiwek - On your mark</item>
        <item>Brillz ETC!ETC! - Swoop</item>
        <item>Carnage - Spaceman Remix</item>
    </string-array>

    <string name="title_activity_about">About</string>

    <!--Artist Urls-->
    <string name="wiwek"><a href="https://soundcloud.com/wiwek">Wiwek</a></string>
    <string name="gregor_salto"><a href="https://soundcloud.com/gregorsalto">Grego Salto</a></string>
    <string name="dj_sam_f"><a href="https://soundcloud.com/djsamf">DJ Sam F</a></string>
    <string name="brillz"><a href="https://soundcloud.com/itsbrillz">Brillz</a></string>
    <string name="dj_snake"><a href="https://soundcloud.com/djsnake-king">DJ Snake</a></string>
    <string name="carnage"><a href="https://soundcloud.com/djcarnageofficial">Carnage</a></string>
    <string name="ETC_ETC"><a href="https://soundcloud.com/etc-etc">ETC!ETC!</a></string>

</resources>
